--- a/config.toml
+++ b/config.toml
@@ -32,9 +32,9 @@ build-mode = "apk"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
 
 [Music]
-build-mode = "both"
+build-mode = "apk"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
-apkmirror-arch = "apk"
+apkmirror-arch = "both"
 
 [Twitter]
 build-mode = "apk"
